tests/test_typing/bad/err5.catala_en
> Include: common.catala_en

```catala
scope S:
  definition z equals [
    Structure { -- i: 3 -- e: Int content x };
    Structure { -- i: 4 -- e: y };
    1040
  ]
  definition a equals number of (z ++ z) / 2
```

```catala-test-inline
$ catala Typecheck
[ERROR] Error during typechecking, incompatible types:
--> decimal
--> integer

Error coming from typechecking the following expression:
  --> tests/test_typing/bad/common.catala_en
   | 
15 |   output a content decimal
   |          ^
   + 

Type decimal coming from expression:
  --> tests/test_typing/bad/common.catala_en
   | 
15 |   output a content decimal
   |                    ^^^^^^^
   + 

Type integer coming from expression:
  --> tests/test_typing/bad/err5.catala_en
   | 
10 |   definition a equals number of (z ++ z) / 2
   |                       ^^^^^^
   + 
#return code 255#
```
